--- a/vignettes/Child_RMDs/_Reworked_First_Bit.Rmd
+++ b/vignettes/Child_RMDs/_Reworked_First_Bit.Rmd
@@ -6,244 +6,34 @@ output:
     toc: yes 
   output: html_notebook
 params:
-  path_to_write_fls_to_1L_chr: "../../../../../../../../Data/Project/Utility_Models"
+  path_to_data_1L_chr: "../Data/fake_pop_tb.rds"
+  path_to_write_fls_to_1L_chr: "../../../../../../../Data/Project/Utility_Models"
   dir_nm_1L_chr: "One_Predr_Output"
 ---
 
-
-Check missing
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = TRUE)
+library(xtable) # EDIT
+library(FBaqol) # EDIT
+library(magrittr)
+```
 
 ```{r}
-# non missing 
-table(Baseline_follow[!is.na(Baseline_follow$aqol6d_total_c),]$round)
-
-nrow(Baseline_follow)
+data_tb <- transform_raw_aqol_tb_to_aqol6d_tb(readRDS(params$path_to_data_1L_chr))
+bl_tb <- data_tb %>% 
+   dplyr::filter(round=="Baseline") %>% 
+   dplyr::select(aqol6d_total_w, PHQ9, BADS, GAD7, OASIS, SCARED, K6) %>% 
+  dplyr::mutate(aqol6d_total_w = ifelse(aqol6d_total_w == 1, 0.999, aqol6d_total_w)) %>% 
+  dplyr::mutate(aqol6d_total_w_log = log(aqol6d_total_w),
+         aqol6d_total_w_logit = psych::logit(aqol6d_total_w),
+         aqol6d_total_w_loglog = -log(-log(aqol6d_total_w)),
+         aqol6d_total_w_cloglog = log(-log(1-aqol6d_total_w))) %>% 
+  dplyr::filter(!is.na(PHQ9)) 
+#folds_10 <- createFolds(baseline$aqol6d_total_w , k = 10, list = TRUE, returnTrain = FALSE)
 ```
 
-# Descriptive statistics 
-
-
-```{r, results='asis'}
-my_controls <- tableby.control(
-  test = F,
-  total = F,
-  digits=1,
-  digits.pct=1,
-  digits.p=3,
-  numeric.test = "anova", cat.test = "chisq",
-  numeric.stats = c("meansd", "medianq1q3", "range", "Nmiss2"),
-  cat.stats = c("countpct", "Nmiss2"),
-  ordered.stats=c("countpct", "Nmiss2"),
-  stats.labels = list(
-    meansd = "Mean (SD)",
-    medianq1q3 = "Median (Q1, Q3)",
-    range = "Min - Max",
-    Nmiss2 = "Missing"
-  )
-)
- 
-table<- tableby( round  ~ d_age + d_agegroup + Gender + d_sexual_ori_s + Region + CALD +  d_studying_working  + c_p_diag_s + c_clinical_staging_s + SOFAS ,
-  data = Baseline_follow,
-  control = my_controls
-)
- 
-summary(table,
-  title = "Participant characteristics"
-)
-```
-
-
-# Outcome table
-```{r, results='asis'}
- 
-table<- tableby(  round~  PHQ9 +  BADS+ GAD7 +OASIS+ SCARED + K6  + aqol6d_total_c  + aqol6d_total_w ,
-  data = Baseline_follow,
-  control = my_controls
-)
- 
-summary(table,
-  title = "Participant outcome"
-)
-```
-
-# Correlation 
-
-```{r, results='asis'}
-library(xtable)
-baseline<- Baseline_follow %>% 
-   filter(round=="Baseline") %>% 
-   dplyr::select( aqol6d_total_w, PHQ9 ,  BADS, GAD7 ,OASIS,  SCARED, K6,) 
-
-corstars(baseline, result="html")
-
-followup<-Baseline_follow[Baseline_follow$round=="Follow-up",] %>% 
-   dplyr::select(aqol6d_total_w, PHQ9 ,  BADS, GAD7 ,OASIS,  SCARED, K6 ) 
-
-corstars(followup, result="html")
-
-``` 
-
-
-# Plots 
-
-## Crude question responses 
-  
-```{r, fig.height=12, fig.width=12,warning=FALSE,}
-
-colNames <- names(select(Baseline_follow, starts_with("aqol6d_q")))
-
-labNames<-c("Household tasks", "Getting around", "Morbility","Self care",
-            "Enjoy close rel’s", "Family rel’s", "Community involvement",
-             "Despair","Worry", "Sad", "Agitated",
-             "Energy level", "Control", "Coping", 
-             "Frequency of pain", "Degree of pain", "Pain interference",
-              "Vision", "Hearing", "Communication")
-
-plot<-list() 
-j=1
-for(i in colNames){ 
-    
-    dta<-Baseline_follow %>% 
-          filter( !is.na(!!as.name(i) )) %>% 
-          group_by( round, !!as.name(i) ) %>% 
-          summarise(n=n()) %>% 
-          group_by(round) %>% 
-          mutate(y=n/sum(n))
-    labelx<-labNames[j]
-    j=j+1
-    plot[[i]]<- ggplot(dta, aes_string(i)) +
-          geom_bar(aes(y = y, fill=round),stat = "identity", na.rm = TRUE, position="dodge",colour="white",alpha=0.7) +
-          scale_y_continuous(labels = percent_format()) +
-          labs(x=labelx,y="Percentage",fill = "Data collection")  + 
-          theme_bw()+
-          theme(legend.position="none") +
-          scale_fill_manual(values=c("#de2d26","#fc9272")) 
-}
-
-
-# function to extract the legend (borrowed from: https://github.com/hadley/ggplot2/wiki/Share-a-legend-between-two-ggplot2-graphs )
-g_legend<-function(a.gplot){
-  tmp <- ggplot_gtable(ggplot_build(a.gplot))
-  leg <- which(sapply(tmp$grobs, function(x) x$name) == "guide-box")
-  legend <- tmp$grobs[[leg]]
-  return(legend)}
-
-#save legend from one plot 
-legend<-ggplot(dta, aes_string(i)) +
-          geom_bar(aes(y = y, fill=round),stat = "identity", na.rm = TRUE, position="dodge",colour="white",alpha=0.7)  +
-          labs(x=labelx,y="Percentage", fill = "Data collection")  +
-          theme(legend.position="bottom") +
-          scale_fill_manual(values=c("#de2d26","#fc9272")) 
-legend <- g_legend(legend)
-
-#arrange all plot together
-grid.arrange(ggarrange(plotlist=plot,nrow=5,ncol=4) ,
-             legend, nrow=2,heights=c(10, 1))
-
-```
-
-
-
-## Weighted subtotal scores
-
-```{r, fig.height=10 ,fig.width=8,warning=FALSE}
-colNames <- names(select(Baseline_follow, starts_with("aqol6d_subtotal_w")))
-
-plot<-list()
-for(i in colNames){ 
-    
-    labelx<-eval(parse(text=paste0("attributes(Baseline_follow$",i,")$label")))
-    labelx<- str_to_sentence(str_sub(labelx,38,55))
-    plot[[i]]<- ggplot(Baseline_follow, aes_string(i)) +
-      geom_histogram(bins=8,color = "white",aes(fill=round,y=2*(..density..)/sum(..density..)), position = 'dodge',alpha=0.7) +
-      labs(x=labelx,y="Percentage")  + 
-      theme_bw() +
-      scale_y_continuous(labels = scales::percent) +
-      theme(legend.position="none") +
-      scale_fill_manual(values=c("#de2d26","#fc9272")) 
-}
-
-# function to extract the legend (borrowed from: https://github.com/hadley/ggplot2/wiki/Share-a-legend-between-two-ggplot2-graphs )
-g_legend<-function(a.gplot){
-  tmp <- ggplot_gtable(ggplot_build(a.gplot))
-  leg <- which(sapply(tmp$grobs, function(x) x$name) == "guide-box")
-  legend <- tmp$grobs[[leg]]
-  return(legend)}
-
-#save legend from one plot 
-legend<-ggplot(Baseline_follow, aes_string(i)) +
-      geom_histogram(bins=8,color = "white",aes(fill=round,y=2*(..density..)/sum(..density..)), position = 'dodge',alpha=0.7) +
-      labs(x=labelx,y="Percentage", fill = "Data collection")  + 
-      theme_bw() +
-      theme(legend.position="bottom") +
-      scale_y_continuous(labels = scales::percent) +
-      scale_fill_manual(values=c("#de2d26","#fc9272")) 
-
-
-legend <- g_legend(legend)
-
-grid.arrange(ggarrange(plotlist=plot,nrow=3,ncol=2) ,
-             legend, nrow=2,heights=c(10, 1))  
-
-```
-
-
-
-## log-log transformed scores subtotal scores
-
-
-```{r, fig.height=10 ,fig.width=8,warning=FALSE}
-colNames <- names(select(Baseline_follow, starts_with("aqol6d_subtotal_w")))
-
-plot<-list()
-for(i in colNames){
-    targetvar=paste0("tran_",i)
-    #log-log transform 
-    Baseline_follow<- mutate(Baseline_follow,!!targetvar := log(-log(1-!!as.name(i))))  %>% 
-          mutate(!!targetvar :=ifelse(!!as.name(i)==1,log(-log(1-0.999)),!!as.name(targetvar )))
-    #extract label  
-    labelx<-eval(parse(text=paste0("attributes(Baseline_follow$",i,")$label")))
-    labelx<- paste0("log-log transformed ",str_to_sentence(str_sub(labelx,38,55)))
-    #plot
-    plot[[i]]<- ggplot(Baseline_follow, aes_string(targetvar)) +
-         geom_histogram(bins=8,color = "white",aes(fill=round),position = 'dodge',alpha=0.7) +
-          labs(x=labelx, y="Percentage")  +
-          theme_bw() +
-          scale_y_continuous(labels = scales::percent) +
-          theme(legend.position="none") +
-          scale_fill_manual(values=c("#de2d26","#fc9272")) 
-      
-}
-
-# extract legend
-legend<-ggplot(Baseline_follow, aes_string(targetvar)) +
-         geom_histogram(bins=8,color = "white",aes(fill=round),position = 'dodge',alpha=0.7) +
-          labs(x=labelx, y="Percentage", fill = "Data collection")  +
-          theme_bw() +
-          theme(legend.position="bottom") +
-          scale_y_continuous(labels = scales::percent) +
-          scale_fill_manual(values=c("#de2d26","#fc9272")) 
-
-legend <- g_legend(legend)
-grid.arrange(ggarrange(plotlist=plot,nrow=3,ncol=2) ,
-             legend, nrow=2,heights=c(10, 1))  
-
-```
-
-## Total utility score and by round 
-
-```{r,fig.width=8,warning=FALSE}
-
-ggplot(Baseline_follow,aes(x=aqol6d_total_w,fill=round)) +
-        theme_bw() +
-        geom_histogram( aes(y = stat(width*density)),
-                        bins=10,position="dodge",colour="white",alpha=0.7) + 
-        scale_y_continuous(labels = percent_format()) +
-        labs(y="Percentage",x= "AQoL-6D utility score", fill = "Data collection")  +
-        scale_fill_manual(values=c("#de2d26","#fc9272"))  +
-        theme(legend.position="bottom")
-
-
+```{r}
+set.seed(12345)
 ```
 
 # Regression testing 
@@ -252,59 +42,79 @@ ggplot(Baseline_follow,aes(x=aqol6d_total_w,fill=round)) +
 
 ```{r}
 library(MASS)
-initech_fit = lm(aqol6d_total_w ~ PHQ9, data = baseline)
+initech_fit = lm(aqol6d_total_w ~ PHQ9, data = bl_tb)
 bc<-boxcox(initech_fit, plotit = TRUE)
 bc$x[which.max(bc$y)]
-```
-
-close to no transformation
-
-```{r,fig.width= 12, fig.height=6}
-
-baseline<-baseline %>% 
-  mutate(aqol6d_total_w=ifelse(aqol6d_total_w==1,0.999,aqol6d_total_w)) %>% 
-  mutate(aqol6d_total_w_log=log(aqol6d_total_w),
-         aqol6d_total_w_logit=logit(aqol6d_total_w),
-         aqol6d_total_w_loglog= -log(-log(aqol6d_total_w)),
-         aqol6d_total_w_cloglog= log(-log(1-aqol6d_total_w))) %>% 
-  filter(!is.na(PHQ9)) 
-
-
-set.seed(12345)
-# folds_10 <- caret::createFolds(baseline$aqol6d_total_w , k = 10, list = TRUE, returnTrain = FALSE)
-
-gather(baseline, variable, value, aqol6d_total_w, aqol6d_total_w_log,  aqol6d_total_w_logit,  aqol6d_total_w_loglog,aqol6d_total_w_cloglog) %>%
-mutate(variable = factor(variable, levels = c("aqol6d_total_w", 
-                                                "aqol6d_total_w_log", 
-                                                "aqol6d_total_w_logit", 
-                                                "aqol6d_total_w_loglog", "aqol6d_total_w_cloglog"),
-                                      labels= c("No transformation",
-                                                "Log", "Logit","Log-log", "Complementary log-log"))) %>%
-  ggplot(aes(x = value, fill = variable)) +
-    geom_bkde() +
-    geom_rug() +
-    scale_fill_viridis(guide = FALSE, discrete = TRUE) +
-    facet_wrap(~variable, scales = "free") +
-    theme_bw() + labs(x="Transformed AQoL-6D utility scores")
 ```
 
 ## Linear model (no transformation)
 ```{r}
 make_one_predr_mdl <- function(data_tb,
                                dep_var_nm_1L_chr = "aqol6d_total_w",
+                               tfmn_1L_chr = "NTF",
                                predr_var_nm_1L_chr,
-                               mdl_type_1L_chr = "lm"){
-  mdl_1L_chr <- paste0(mdl_type_1L_chr,"(",dep_var_nm_1L_chr," ~ ",predr_var_nm_1L_chr, ", data = data_tb)")
+                               mdl_type_1L_chr = "OLS_NTF",
+                               mdl_types_lup = NULL){
+    if(is.null(mdl_types_lup))
+      mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
+  mdl_1L_chr <- paste0(ready4fun::get_from_lup_obj(mdl_types_lup,
+                                                   match_var_nm_1L_chr = "short_name_chr",
+                                                   match_value_xx = mdl_type_1L_chr,
+                                                   target_var_nm_1L_chr = "fn_chr",
+                                                   evaluate_lgl = F),
+                       "(",
+                       transform_dep_var_nm(dep_var_nm_1L_chr, tfmn_1L_chr = tfmn_1L_chr),
+                       " ~ ",
+                       predr_var_nm_1L_chr, 
+                       ", data = data_tb)")
   mdl <- eval(parse(text = mdl_1L_chr))
   return(mdl)
 }
 make_predn_ds_with_one_predr <- function(mdl,
                                          dep_var_nm_1L_chr = "aqol6d_total_w",
+                                         tfmn_1L_chr = "NTF",
                                          predr_var_nm_1L_chr,
                                          predr_vals_dbl){
   predn_ds_tb <- tibble::tibble(!!rlang::sym(predr_var_nm_1L_chr) := predr_vals_dbl)
-  predn_ds_tb <- predn_ds_tb %>% dplyr::mutate(!!rlang::sym(dep_var_nm_1L_chr) := predict(mdl, newdata = predn_ds_tb))
+  predn_ds_tb <- predn_ds_tb %>% dplyr::mutate(!!rlang::sym(dep_var_nm_1L_chr) := predict(mdl, newdata = predn_ds_tb) %>% calculate_dep_var_tfmn(tfmn_1L_chr = tfmn_1L_chr, tfmn_is_outp_1L_lgl = T))
   return(predn_ds_tb)
+}
+make_smry_of_one_predr_mdl <- function(data_tb,
+                                       mdl,
+                                       folds_ls,
+                                       dep_var_nm_1L_chr = "aqol6d_total_w",
+                                       tfmn_1L_chr = "NTF",
+                                       predr_var_nm_1L_chr,
+                                       mdl_type_1L_chr = "OLS_NTF",
+                                       mdl_types_lup = NULL){
+    if(is.null(mdl_types_lup))
+    mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
+    mdl_desc_1L_chr <- ready4fun::get_from_lup_obj(mdl_types_lup,
+                                                   match_var_nm_1L_chr = "short_name_chr",
+                                                   match_value_xx = mdl_type_1L_chr,
+                                                   target_var_nm_1L_chr = "long_name_chr",
+                                                   evaluate_lgl = F)
+purrr::map_dfr(folds_ls,
+               ~ {
+                   mdl <- make_one_predr_mdl(data_tb,
+                               dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                               tfmn_1L_chr = tfmn_1L_chr,
+                               predr_var_nm_1L_chr = predr_var_nm_1L_chr,
+                               mdl_type_1L_chr = mdl_type_1L_chr,
+                               mdl_types_lup = mdl_types_lup) 
+  pred_old_dbl <- predict(mdl)
+  pred_new_dbl <- predict(mdl,newdata=data_tb[.x,]) %>% calculate_dep_var_tfmn(tfmn_1L_chr = tfmn_1L_chr,
+                                                                               tfmn_is_outp_1L_lgl = T)
+  tibble::tibble(Rsquared = caret::R2(pred_old_dbl, data_tb[-.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr)), form = "traditional"),
+  RMSE = caret::RMSE(pred_old_dbl, data_tb[-.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))),
+  MAE = caret::MAE(pred_old_dbl, data_tb[-.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))),
+  RsquaredP = caret::R2(pred_new_dbl, data_tb[.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr)), form = "traditional"),
+  RMSEP = caret::RMSE(pred_new_dbl, data_tb[.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))),
+  MAEP = caret::MAE(pred_new_dbl, data_tb[.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))))
+               }
+) %>% dplyr::summarise_all(mean) %>%
+    dplyr::mutate(Model = mdl_desc_1L_chr) %>%
+    dplyr::select(Model, dplyr::everything())
 }
 plot_lnr_cmprsn <- function(data_tb,
                       predn_ds_tb,
@@ -345,40 +155,19 @@ transform_data_tb_for_cmprsn <- function(data_tb,
          !!rlang::sym(source_data_nm_1L_chr) := !!rlang::sym(dep_var_nm_1L_chr))
   return(tfd_data_tb)
 }
-make_smry_of_one_predr_mdl <- function(data_tb,
-                                       mdl,
-                                       folds_ls,
-                                       dep_var_nm_1L_chr = "aqol6d_total_w",
-                                       predr_var_nm_1L_chr,
-                                       mdl_type_1L_chr = "lm",
-                                       mdl_nm_1L_chr = "OLS (no transformation)"){
-purrr::map_dfr(folds_ls,
-               ~ {
-                   mdl <- make_one_predr_mdl(data_tb,
-                               dep_var_nm_1L_chr = dep_var_nm_1L_chr,
-                               predr_var_nm_1L_chr = predr_var_nm_1L_chr,
-                               mdl_type_1L_chr = mdl_type_1L_chr) 
-  pred_old_dbl <- predict(mdl)
-  pred_new_dbl <- predict(mdl,newdata=data_tb[.x,])
-  tibble::tibble(Rsquared = caret::R2(pred_old_dbl, data_tb[-.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr)), form = "traditional"),
-  RMSE = caret::RMSE(pred_old_dbl, data_tb[-.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))),
-  MAE = caret::MAE(pred_old_dbl, data_tb[-.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))),
-  RsquaredP = caret::R2(pred_new_dbl, data_tb[.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr)), form = "traditional"),
-  RMSEP = caret::RMSE(pred_new_dbl, data_tb[.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))),
-  MAEP = caret::MAE(pred_new_dbl, data_tb[.x,] %>% dplyr::pull(!!rlang::sym(dep_var_nm_1L_chr))))
-               }
-) %>% dplyr::summarise_all(mean) %>%
-    dplyr::mutate(Model = mdl_nm_1L_chr) %>%
-    dplyr::select(Model, dplyr::everything())
-}
 write_one_predr_mdl_plts <- function(data_tb,
                                      mdl,
+                                     dep_var_nm_1L_chr = "aqol6d_total_w",
+                                     tfmn_1L_chr = "NTF",
                                      predr_var_nm_1L_chr,
                                      predr_var_desc_1L_chr,
                                      predr_vals_dbl,
                                      path_to_write_to_1L_chr){
   tfd_data_tb <- transform_data_tb_for_cmprsn(data_tb, mdl = mdl) 
-  predn_ds_tb <- make_predn_ds_with_one_predr(mdl, predr_var_nm_1L_chr = predr_var_nm_1L_chr, predr_vals_dbl = predr_vals_dbl)
+  predn_ds_tb <- make_predn_ds_with_one_predr(mdl, 
+                                              dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                                              tfmn_1L_chr = tfmn_1L_chr,
+                                              predr_var_nm_1L_chr = predr_var_nm_1L_chr, predr_vals_dbl = predr_vals_dbl)
   purrr::pwalk(list(plt_fn_ls = list(plot_lnr_cmprsn, ggplot2::autoplot, plot_obsd_predd_dnst, plot_obsd_predd_dnst, plot_sctr_lnr_cmprsn),
                  fn_args_ls_ls = list(list(data_tb = data_tb,
                                         predn_ds_tb = predn_ds_tb,
@@ -403,150 +192,101 @@ write_one_predr_mdl_plts <- function(data_tb,
   
 }
 write_one_predr_mdl_outp <- function(data_tb,
+                                     dep_var_nm_1L_chr = "aqol6d_total_w",
+                                     tfmn_1L_chr = "NTF",
                                      predr_var_nm_1L_chr, 
                                      predr_var_desc_1L_chr,
                                      predr_vals_dbl,
-                                     mdl_type_1L_chr = "lm",
+                                     mdl_type_1L_chr = "OLS_NTF",
+                                     mdl_types_lup = NULL,
                                      path_to_write_to_1L_chr,
-                                     mdl_nm_1L_chr = "OLS (no transformation)",
                                      mdl_fl_nm_1L_chr){
-  mdl <- make_one_predr_mdl(data_tb,predr_var_nm_1L_chr = predr_var_nm_1L_chr, mdl_type_1L_chr = mdl_type_1L_chr)
+  if(is.null(mdl_types_lup))
+    mdl_types_lup <- data("mdl_types_lup", package = "FBaqol", envir = environment())
+  data_tb <- data_tb %>% dplyr::mutate(!!rlang::sym(transform_dep_var_nm(dep_var_nm_1L_chr,
+                                                                         tfmn_1L_chr = tfmn_1L_chr)) := !!rlang::sym(dep_var_nm_1L_chr) %>% calculate_dep_var_tfmn())
+  mdl <- make_one_predr_mdl(data_tb,
+                            dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                            tfmn_1L_chr = tfmn_1L_chr,
+                            predr_var_nm_1L_chr = predr_var_nm_1L_chr, 
+                            mdl_type_1L_chr = mdl_type_1L_chr,
+                            mdl_types_lup = mdl_types_lup)
   write_one_predr_mdl_plts(data_tb,
                          mdl = mdl,
+                         dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                         tfmn_1L_chr = tfmn_1L_chr,
                          predr_var_nm_1L_chr = predr_var_nm_1L_chr,
                          predr_var_desc_1L_chr = predr_var_desc_1L_chr,
                          predr_vals_dbl = predr_vals_dbl,
                          path_to_write_to_1L_chr = path_to_write_to_1L_chr)
 make_smry_of_one_predr_mdl(data_tb,
-                           mdl,
-                           folds_ls,
+                           mdl = mdl,
+                           folds_ls = folds_ls,
+                           dep_var_nm_1L_chr = dep_var_nm_1L_chr,
+                           tfmn_1L_chr = tfmn_1L_chr,
                            predr_var_nm_1L_chr = predr_var_nm_1L_chr,
                            mdl_type_1L_chr = mdl_type_1L_chr,
-                           mdl_nm_1L_chr = mdl_nm_1L_chr)#
+                           mdl_types_lup = mdl_types_lup)#
 saveRDS(mdl,paste0(path_to_write_to_1L_chr,"/",mdl_fl_nm_1L_chr,".RDS"))
 }
+mdl_types_lup <- dplyr::bind_rows(FBaqol::mdl_types_lup,
+  tibble::tibble(short_name_chr = c("OLS_NTF",
+                                     "OLS_LOG",
+                                     "OLS_LOGIT",
+                                     "OLS_LOGLOG",
+                                     "OLS_CLL"),
+               long_name_chr = c("Ordinary Least Squares (No transformation)",
+                                    "Ordinary Least Squares (Log transformation)",
+                                    "Ordinary Least Squares (Logit transformation)",
+                                    "Ordinary Least Squares (Log Log transformation)",
+                                    "Ordinary Least Squares (Complementary Log Log transformation)"))) %>%
+  dplyr::mutate(fn_chr = c(NA_character_,rep("lm",6)))
 ```
 
 ```{r}
-data_tb <- baseline
-folds_ls <- caret::createFolds(baseline$aqol6d_total_w , k = 10, list = TRUE, returnTrain = FALSE)
+folds_ls <- caret::createFolds(bl_tb$aqol6d_total_w , k = 10, list = TRUE, returnTrain = FALSE)
 path_to_write_fls_to_1L_chr <- params$path_to_write_fls_to_1L_chr
 dir_nm_1L_chr <- params$dir_nm_1L_chr
 path_to_write_to_1L_chr <- paste0(path_to_write_fls_to_1L_chr,
                                                       "/",
                                                       dir_nm_1L_chr)
-#
-write_one_predr_mdl_outp(data_tb,
-                         predr_var_nm_1L_chr = "PHQ9", 
-                                     predr_var_desc_1L_chr = "PHQ9 total score",
-                                     predr_vals_dbl = 0:27,
-                                     mdl_type_1L_chr = "lm",
-                                     path_to_write_to_1L_chr = path_to_write_to_1L_chr,
-                                     mdl_nm_1L_chr = "OLS (no transformation)",
-                                     mdl_fl_nm_1L_chr = paste0(predr_var_nm_1L_chr,
-                           "_OLS_NOTF_MDL"))
+predr_var_nm_1L_chr <- "PHQ9"
+write_one_predr_mdl_outp(bl_tb,
+                         predr_var_nm_1L_chr = predr_var_nm_1L_chr, 
+                         predr_var_desc_1L_chr = "PHQ9 total score",
+                         predr_vals_dbl = 0:27,
+                         mdl_type_1L_chr = "OLS_NTF",
+                         path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+                         mdl_types_lup = mdl_types_lup,
+                         mdl_fl_nm_1L_chr = paste0(predr_var_nm_1L_chr,
+                                                   "_OLS_NOTF_MDL"))
 
 #summary(mdl)
 ```
 
 
+## Linear model (log transformation)
 ```{r}
-summary_table<-data.frame("Model"=NA,"Rsquare"=NA,"RMSE"=NA, "MAE"=NA, "Rsquare.prediction"=NA, "RMSE prediction"=NA,"MAE prediction"=NA)
-
-library(ggfortify)
-fit = lm(aqol6d_total_w ~ PHQ9, data = baseline)
-summary(fit)
-
-
-newdata<-data.frame(PHQ9=0:27)
-newdata$aqol6d_total_w=predict(fit,newdata=newdata)
- 
-ggplot(baseline,aes(x = PHQ9, y= aqol6d_total_w )) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  geom_line(data=newdata,aes(x = PHQ9, y= aqol6d_total_w),col="red")  +
-  theme_bw() + labs(x="PHQ9 total score",y="AQoL-6D utility score")
-
-ggplot2::autoplot(fit, which = 1:6, ncol = 3, label.size = 3)
-
-
-baseline %>% 
-    mutate(Predicted=predict(fit),
-         Original=aqol6d_total_w) %>% 
-    gather(variable, value, Predicted, Original) %>%
-    ggplot(aes(x = value, fill = variable)) +
-    geom_bkde(alpha=0.5) +
-    geom_rug() +
-    scale_fill_viridis( discrete = TRUE) +
-    theme_bw() +
-    theme(legend.position="bottom") +
-    labs( x="AQoL-6D utility score",fill="")
-
-baseline %>% 
-    mutate(Simulated=simulate(fit)$sim_1, 
-         Original=aqol6d_total_w) %>% 
-    gather(variable, value, Simulated, Original) %>%
-    ggplot(aes(x = value, fill = variable)) +
-    geom_bkde(alpha=0.5) +
-    geom_rug() +
-    scale_fill_viridis( discrete = TRUE) +
-    theme_bw() +
-    theme(legend.position="bottom") +
-    labs( x="AQoL-6D utility score",fill="")
-
-baseline %>% 
-  mutate(Predicted=predict(fit),
-         Original=aqol6d_total_w) %>% 
-  ggplot(aes(x = Original, y=Predicted)) +
-  geom_point() + 
-  geom_smooth(method = "loess", size = 1.5) +
-  theme_bw() +
-  geom_abline(intercept = 0, slope = 1, color="red", 
-                 linetype="dashed", size=1.5) +
-  xlim(0, 1) + ylim(0, 1)
-
-
-Rsquared<-NA
-RMSE<-NA
-MAE<-NA
-RsquaredP<-NA
-RMSEP<-NA
-MAEP<-NA
-for (i in 1:10) {
-  fit = lm(aqol6d_total_w ~ PHQ9, data = baseline[-folds_10[[i]],])
-  pred<-predict(fit)
-  Rsquared[i]=R2(pred, baseline[-folds_10[[i]],]$aqol6d_total_w, form = "traditional")
-  RMSE[i]=RMSE(pred, baseline[-folds_10[[i]],]$aqol6d_total_w)
-  MAE[i]=MAE(pred, baseline[-folds_10[[i]],]$aqol6d_total_w)
-  pred<-predict(fit,newdata=baseline[folds_10[[i]],])
-  RsquaredP[i]=R2(pred, baseline[folds_10[[i]],]$aqol6d_total_w, form = "traditional")
-  RMSEP[i]=RMSE(pred, baseline[folds_10[[i]],]$aqol6d_total_w)
-  MAEP[i]=MAE(pred, baseline[folds_10[[i]],]$aqol6d_total_w)
-} 
-
-n=1
-#save model fit
-summary_table[n,1]="OLS (no transformation)" 
-summary_table$Rsquare[n]= mean(Rsquared)
-summary_table$RMSE[n]= mean(RMSE)
-summary_table$MAE[n]=mean(MAE)
-summary_table$`Rsquare.prediction`[n]=mean(RsquaredP)
-summary_table$`RMSE.prediction`[n]=mean(RMSEP)
-summary_table$`MAE.prediction`[n]=mean(MAEP)
-
+tfmn_1L_chr <- "log"
+write_one_predr_mdl_outp(bl_tb,
+                         tfmn_1L_chr = "log", 
+                         predr_var_nm_1L_chr = predr_var_nm_1L_chr, 
+                                     predr_var_desc_1L_chr = "PHQ9 total score",
+                                     predr_vals_dbl = 0:27,
+                                     mdl_type_1L_chr = "lm",
+                                     path_to_write_to_1L_chr = path_to_write_to_1L_chr,
+                                     mdl_fl_nm_1L_chr = paste0(predr_var_nm_1L_chr,
+                           "_OLS_NOTF_MDL"))
 ```
 
 
-
-## Linear model (log transformation)
-
 ```{r}
 
-fit = lm(aqol6d_total_w_log ~ PHQ9, data = baseline)
+fit = lm(aqol6d_total_w_log ~ PHQ9, data = baseline) #
 summary(fit)
 
 newdata<-data.frame(PHQ9=0:27)
-newdata$aqol6d_total_w=exp(predict(fit,newdata=newdata))
+newdata$aqol6d_total_w=exp(predict(fit,newdata=newdata)) #
  
 ggplot(baseline,aes(x = PHQ9, y= aqol6d_total_w )) +
   geom_point() + 
